--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -54,10 +54,10 @@
             android:layout_marginStart="15dp" />
 
         <ImageButton
-            android:id="@+id/inst_login_button"
+            android:id="@+id/twitter_login_button"
             android:layout_width="55dp"
             android:layout_height="55dp"
-            android:src="@drawable/insta"
+            android:src="@drawable/twitter"
             android:scaleType="fitCenter"
             android:padding="0dp"
             android:background="#00000000"
@@ -131,7 +131,6 @@
             fab:fab_colorRipple="@color/colorPrimary"
             fab:fab_label="Sign Up with Email"
             fab:fab_size="normal" />
-
 
 
         <com.github.clans.fab.FloatingActionButton
