--- a/app/src/main/res/layout/activity_display_profile.xml
+++ b/app/src/main/res/layout/activity_display_profile.xml
@@ -170,7 +170,7 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:scrollbars="none"
         app:behavior_overlapTop="20dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -394,7 +394,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:weightSum="4">
+                    android:weightSum="2">
 
                     <TextView
                         android:layout_width="0sp"
@@ -405,7 +405,8 @@
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
-                        android:layout_marginRight="10sp"
+                        android:layout_marginLeft="10sp"
+                        android:layout_marginRight="15sp"
                         android:padding="4sp"/>
 
                     <TextView
@@ -417,65 +418,51 @@
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
-                        android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp"
                         android:padding="4sp"/>
 
-                    <TextView
-                        android:layout_width="0sp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:textColor="#000000"
-                        android:text="Chest"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:background="@drawable/box4"
-                        android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
-                        android:padding="4sp"/>
-
-                    <TextView
-                        android:layout_width="0sp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:textColor="#000000"
-                        android:text="Waist"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:background="@drawable/box4"
-                        android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
-                        android:padding="4sp"/>
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="4">
+                    android:weightSum="2"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="0sp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Height "
-                        android:textAlignment="center"
-                        android:background="@drawable/box5"
-                        android:layout_marginRight="10sp"
-                        android:padding="4sp"/>
-
-                    <TextView
-                        android:layout_width="0sp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:textColor="#000000"
-                        android:text="Weight"
+                        android:text="Text Height"
                         android:textAlignment="center"
                         android:background="@drawable/box5"
                         android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
+                        android:layout_marginRight="15sp"
                         android:padding="4sp"/>
+
+                    <TextView
+                        android:layout_width="0sp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:textColor="#000000"
+                        android:text="Text Weight"
+                        android:textAlignment="center"
+                        android:background="@drawable/box5"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp"
+                        android:padding="4sp"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_marginTop="10sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
 
                     <TextView
                         android:layout_width="0sp"
@@ -484,9 +471,10 @@
                         android:textColor="#000000"
                         android:text="Chest"
                         android:textAlignment="center"
-                        android:background="@drawable/box5"
+                        android:textStyle="bold"
+                        android:background="@drawable/box4"
                         android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
+                        android:layout_marginRight="15sp"
                         android:padding="4sp"/>
 
                     <TextView
@@ -496,9 +484,43 @@
                         android:textColor="#000000"
                         android:text="Waist"
                         android:textAlignment="center"
+                        android:textStyle="bold"
+                        android:background="@drawable/box4"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp"
+                        android:padding="4sp"/>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="2"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="0sp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:textColor="#000000"
+                        android:text="Text Chest"
+                        android:textAlignment="center"
                         android:background="@drawable/box5"
                         android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
+                        android:layout_marginRight="15sp"
+                        android:padding="4sp"/>
+
+                    <TextView
+                        android:layout_width="0sp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:textColor="#000000"
+                        android:text="Text Waist"
+                        android:textAlignment="center"
+                        android:background="@drawable/box5"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp"
                         android:padding="4sp"/>
 
                 </LinearLayout>
