--- a/app/src/main/res/layout/activity_profile_view_edit.xml
+++ b/app/src/main/res/layout/activity_profile_view_edit.xml
@@ -405,18 +405,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:weightSum="4">
+                    android:weightSum="2">
 
                     <TextView
                         android:layout_width="0sp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Height"
+                        android:text="Height "
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
-                        android:layout_marginRight="10sp"
+                        android:layout_marginLeft="10sp"
+                        android:layout_marginRight="15sp"
                         android:padding="4sp"/>
 
                     <TextView
@@ -428,69 +429,51 @@
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
-                        android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp"
                         android:padding="4sp"/>
 
-                    <EditText
-                        android:textSize="14sp"
-                        android:layout_width="0sp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:textColor="#000000"
-                        android:text="Chest"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:background="@drawable/box4"
-                        android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
-                        android:padding="4sp"/>
-
-                    <EditText
-                        android:textSize="14sp"
-                        android:layout_width="0sp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:textColor="#000000"
-                        android:text="Waist"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:background="@drawable/box4"
-                        android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
-                        android:padding="4sp"/>
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="4">
+                    android:weightSum="2"
+                    android:orientation="horizontal">
 
                     <EditText
-                        android:textSize="14sp"
                         android:layout_width="0sp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Height"
-                        android:textAlignment="center"
-                        android:background="@drawable/box5"
-                        android:layout_marginRight="10sp"
-                        android:padding="4sp"/>
-
-                    <EditText
-                        android:textSize="14sp"
-                        android:layout_width="0sp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:textColor="#000000"
-                        android:text="Weight"
+                        android:text="Text Height"
                         android:textAlignment="center"
                         android:background="@drawable/box5"
                         android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
+                        android:layout_marginRight="15sp"
                         android:padding="4sp"/>
+
+                    <EditText
+                        android:layout_width="0sp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:textColor="#000000"
+                        android:text="Text Weight"
+                        android:textAlignment="center"
+                        android:background="@drawable/box5"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp"
+                        android:padding="4sp"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_marginTop="10sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="2">
 
                     <TextView
                         android:layout_width="0sp"
@@ -499,9 +482,10 @@
                         android:textColor="#000000"
                         android:text="Chest"
                         android:textAlignment="center"
-                        android:background="@drawable/box5"
+                        android:textStyle="bold"
+                        android:background="@drawable/box4"
                         android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
+                        android:layout_marginRight="15sp"
                         android:padding="4sp"/>
 
                     <TextView
@@ -511,9 +495,43 @@
                         android:textColor="#000000"
                         android:text="Waist"
                         android:textAlignment="center"
+                        android:textStyle="bold"
+                        android:background="@drawable/box4"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp"
+                        android:padding="4sp"/>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="2"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:layout_width="0sp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:textColor="#000000"
+                        android:text="Text Chest"
+                        android:textAlignment="center"
                         android:background="@drawable/box5"
                         android:layout_marginLeft="10sp"
-                        android:layout_marginRight="10sp"
+                        android:layout_marginRight="15sp"
+                        android:padding="4sp"/>
+
+                    <EditText
+                        android:layout_width="0sp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:textColor="#000000"
+                        android:text="Text Waist"
+                        android:textAlignment="center"
+                        android:background="@drawable/box5"
+                        android:layout_marginLeft="15sp"
+                        android:layout_marginRight="15sp"
                         android:padding="4sp"/>
 
                 </LinearLayout>
