--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="wrap_content"
+    android:orientation="horizontal"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#ffff"
+    android:background="#ffffff"
     android:paddingTop="10dp"
-    android:layout_marginTop="6dp">
+    android:layout_marginTop="6dp"
+    android:id="@+id/message_layout">
+
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/IMG"
