--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -38,30 +38,39 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="1">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_marginTop="50dp"
             android:paddingLeft="30dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150sp"
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_gravity="center"
                 android:scaleType="centerCrop"
                 android:id="@+id/profile_image"
                 android:layout_width="130sp"
                 android:layout_height="130sp"
-                android:src="@drawable/logo"/>
+                android:src="@drawable/com_facebook_profile_picture_blank_square"/>
 
             <LinearLayout
-                android:layout_marginLeft="50sp"
-                android:layout_width="150sp"
+                android:layout_marginLeft="40sp"
+                android:layout_marginRight="40sp"
+                android:layout_height="match_parent"
+                android:layout_width="fill_parent"
                 android:orientation="vertical"
-                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_gravity="center">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#ffffff"
+                    android:text="Choose Profile Picture"
+                    android:gravity="center"
+                    android:layout_marginBottom="15sp"/>
 
                 <Button
                     android:id="@+id/click_picture"
@@ -71,7 +80,7 @@
                     android:text="Click a picture"
                     android:textColor="#000000"
                     android:textAllCaps="false"
-                    android:layout_marginBottom="20sp"
+                    android:layout_marginBottom="15sp"
                     android:padding="2sp"/>
 
 
